[project]
name = "FletXr"
version = "0.1.4.b230"
description = "The GetX-inspired Python Framework for Building Reactive, Cross-Platform Apps with Flet"
readme = "PYPI.md"
license = {file = "LICENSE"}
authors = [{ name = "AllDotPy", email = "hello@alldotpy.com" }]
maintainers = [{ name = "#Einswilli", email = "einswilligoeh@email.com" }]
requires-python = "==3.12.12"
keywords = [
    "fletx", "fletxr", "flet", "reactive state",
    "routing", "di", "dependency injection"
]
dependencies = [
    "aiohttp>=3.9.5",
    "flet[all]>=0.28.3",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "packaging>=21.0",
]

[project.scripts]
fletx = "fletx.__main__:main"

[project.urls]
Homepage = "https://alldotpy.github.io/FletX"
Repository = "https://github.com/AllDotPy/FletX"
Documentation = "https://alldotpy.github.io/FletX"
Tracker = "https://github.com/AllDotPy/FletX/issues"

[project.optional-dependencies]
dev = [
    "black", 
    "mypy",
    "twine",
    "uv",
    "build",
    "pytest>=8.4.0", 
    "mkdocs>=1.6.1",
    "setuptools>=80.8.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.setuptools]
packages = ["fletx"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
